app/assets/stylesheets/global.scss
#innerContent
{
	margin-bottom: 15px;
}

.jumbotron.masthead
{
	text-align: center;
}

span form
{
    margin:0;
}

td form
{
    margin:0;
}

fieldset
{
	margin: 10px 0 10px 0;
	padding: 10px;
	border: 2px groove threedface; 
}

legend
{
	width: auto;
	margin-bottom: 0;
	border: none;
}

.notice
{
    font-weight: bold;
    color: $alert-info-text;   
    margin: 20px 10px 10px 10px;
}

.loading
{
    display:none;
	margin-bottom: 15px;
}

.infinite-loading{
	margin-bottom: 400px;
}

.infinite-loading::after{
	position: absolute;
	background: image-url('ajax-loader.gif') no-repeat center;
	height: 30px;
	width: 30px;
	margin-right: auto;
	margin-left: auto;
	margin-top: 10px;
	margin-bottom: 10px;
	content: "";
	left: 0;
	right: 0;
}

.well-fluid
{
  min-height: 20px;
  padding: 19px;
  margin-bottom: 20px;
  background-color: $well-bg;
  border: 1px solid $well-border;
  -webkit-border-radius: $border-radius-base;
  -moz-border-radius: $border-radius-base;
  border-radius: $border-radius-base;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.fixed-alert
{
    display:none; 
    position:fixed; 
    left:0; 
    right:0;
    margin-right: 80px;
    margin-left: 80px;
}

.modal label, input[type="file"]
{
    color:#333;
}

.orderCycleAlert
{
    text-align: center;
    font-size: 18px;
}

.tableContainer
{
    padding-left: 15px; 
    padding-right: 15px;
}

#FlashMessages
{
	font-size: 16px;
	text-align: center;
	margin: 0 auto;
}

.modalErrorMessages .error_explanation h2
{
	color: #013435 !important;
}

.hidden
{
	display:none;
}

.loginContainer
{
	margin-top: 30px;
}

.modal form
{
	margin: 0;
}

.typeahead
{
	z-index: 1051;
}

.error_explanation h2
{
	font-size: 1.5em;
}

/*Fixes mobile dropdowns in Bootstrap v2.3.2*/
.dropdown-backdrop {
    position: static;
}

.facebookTableContainer{
	height: 100%;
	width: 100%;
}

.collapseIconLink{
	color: $gray-darker;
	padding-right:10px;
}

.collapseIconLink:hover,
.collapseIconLink:focus
{
	color: $gray-darker;
	text-decoration: none;
}

.inlineButton
{
	display: inline-block;
	margin-top: 10px;
}

.inline
{
	display: inline-block;
}

#CartButton
{
	margin-right: 15px;
}

#CartSeperator
{
	border-left: 1px solid #98978b; 
	width: 1px; height: 42px; 
	position: relative; 
	top: 10px; 
	display: block
}

/*Fixes responsive tables when using the dataTables plugin*/
.table-responsive .dataTables_wrapper .row
{
	margin-right: 0;
	margin-left: 0;
}

